# rust_lang_book

./: Cargo.toml  README.org
Ch 03 - Common Programming Concepts/fibonacci/: Cargo.toml
Ch 03 - Common Programming Concepts/fibonacci/src/: main.rs
Ch 03 - Common Programming Concepts/temperature/: Cargo.toml
Ch 03 - Common Programming Concepts/temperature/src/: main.rs
Ch 03 - Common Programming Concepts/twelve_days_of_christmas/src/: main.rs
Ch 05 - Using Structs to Structure Related Data/rectangles/src/: main.rs
Ch 08 - Common Collections/human_resources/: Cargo.toml
Ch 08 - Common Collections/human_resources/src/: main.rs
Ch 08 - Common Collections/median_and_mode/src/: main.rs
Ch 08 - Common Collections/pig_latin/src/: main.rs
Ch 11 - Writing Automated Tests/adder/src/: lib.rs
Ch 13 - Functional Language Features∶ Iterators and Closures/minigrep/src/: lib.rs
Ch 13 - Functional Language Features∶ Iterators and Closures/minigrep_iter/src/: main.rs
Ch 13 - Functional Language Features∶ Iterators and Closures/tshirtcompany/: Cargo.toml
Ch 13 - Functional Language Features∶ Iterators and Closures/tshirtcompany/src/: main.rs
Ch 15 - Smart Pointers/cons/src/: main.rs
Ch 15 - Smart Pointers/tree/src/: main.rs
Ch 17 - Object-Oriented Programming Features of Rust/blog/src/: lib.rs
Ch 17 - Object-Oriented Programming Features of Rust/blog2/src/: main.rs
Ch 17 - Object-Oriented Programming Features of Rust/gui/src/: lib.rs
Ch 20 - Final Project∶ Building a Multithreaded Web Server/hello/src/: lib.rs  main.rs
(+1 files in other folders)
